deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dummy-app
  labels:
    app: dummy-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dummy-app
  template:
    metadata:
      labels:
        app: dummy-app
    spec:
      containers:
      - name: dummy-app
        image: k3d-dummy-app-registry:5000/dummy-app:v1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: dummy-app
  labels:
    run: dummy-app
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: webapp
    protocol: TCP
  selector:
    app: dummy-app
